--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ env:
   variables:
     _PROJECT_NAME: "user14-screeningmanage"
     _NAMESPACE: "skcc-ns"
-    _AWS_REGION: "us-southeast-1"
+    _AWS_REGION: "ap-southeast-1"
 
 phases:
   install:
