--- a/yaml/screening_na.yaml
+++ b/yaml/screening_na.yaml
@@ -22,11 +22,11 @@ spec:
           ports:
             - containerPort: 8080
           env:
-            - name: api.url.payment
+            - name: api.hospital.url
               valueFrom:
                 configMapKeyRef:
                   name: my-config
-                  key: api.url.payment
+                  key: api.hospital.url
           
 ---
 
